--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 s.parentNode.insertBefore(wf, s);
             })();
         </script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write( '<script src="js/vendor/jquery-1.11.1.min.js"><\/script>' )</script>
         <script src="js/sudoku.js" async></script>
         <script src="js/sudoku-view.js" async></script>
