--- a/index.html
+++ b/index.html
@@ -1,49 +1,65 @@
-<!doctype html>
-<html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sudoku</title>
-        <meta name="description" content="The classic puzzle game in a modern, mobile-first version.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1>Sudoku</h1>
-        <h2>The classic puzzle game in a modern, mobile-first version.</h2>
-        <div id="game" class="clearfix">
-            <div class="board">
-                <div class="finished-overlay invisible"><span>You Won!</span></div>
-            </div>
-            <div class="controls">
-                <button data-action="restart">Restart</button>
-                <button data-action="new">New Game</button>
-            </div>
-        </div>
-        <script type="text/javascript">
-            WebFontConfig = {
-                google: { families: [ 'Open+Sans:400,700:latin' ] }
-            };
-            (function() {
-                var wf = document.createElement('script');
-                wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-                '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-                wf.type = 'text/javascript';
-                wf.async = 'true';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(wf, s);
-            })();
-        </script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write( '<script src="js/vendor/jquery-1.11.1.min.js"><\/script>' )</script>
-        <script src="js/sudoku.js" async></script>
-        <script src="js/sudoku-view.js" async></script>
-        <script src="js/main.js" async></script>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>SudokuNomi - Sudoku Only - Play sudoku for free online!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/json2.js"></script>
+  <script type="text/javascript" src="js/jstorage.min.js"></script>
+  <script type="text/javascript" src="js/sudoku.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="shortcut icon" href="favicon.ico">
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-577971-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
+</head>
+<body>
+<div id="header">
+  <h1>SudokuNomi</h1>
+</div>
+<div id="options-wrap">
+  <div>
+    <label for="opt-difficulty">
+      Difficulty:
+      <select id="opt-difficulty">
+	<option value="easy">Easy</option>
+	<option value="medium" selected>Medium</option>
+	<option value="hard">Hard</option>
+	<option value="expert">Impossible</option>
+      </select>
+    </label>
+    <label for="opt-showhints">
+      <input id="opt-showhints" type="checkbox"/>
+      Show Hints
+    </label>
+  </div>
+</div>
+<div id="game">
+<noscript>SudokuNomi requires Javascript to function.</noscript>
+</div>
+<div id="timer">
+  0:00:00
+</div>
+<div id="actions-wrap">
+  <button id="opt-newpuzzle" class="button">New Puzzle</button>
+  <button id="opt-printpuzzle" class="button">Print</button>
+</div>
+<div id="footer">
+  <p id="sc-info">Keyboard shortcuts: arrow keys, 0-9, enter</p>
+  <h3>How to play Sudoku </h3>
+  <p>The object of the game is to complete the 9x9 grid so that each row, column, and 3x3 sub grid contain the digits 1-9 once only.</p>
+  <p>Licenced under <a href = "https://creativecommons.org/licenses/by-nc-sa/3.0/">Jaideep25</a></p>
+</div>
+</body>
 </html>
