--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>SudokuNomi - Sudoku Only - Play sudoku for free online!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/json2.js"></script>
   <script type="text/javascript" src="js/jstorage.min.js"></script>
   <script type="text/javascript" src="js/sudoku.js"></script>
