--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SudokuNomi - Sudoku Only - Play sudoku for free online!</title>
+  <title>Sudoku - By Jaideep</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -46,7 +46,7 @@
   </div>
 </div>
 <div id="game">
-<noscript>SudokuNomi requires Javascript to function.</noscript>
+<noscript>SudokuNomi requires Javascript to function</noscript>
 </div>
 <div id="timer">
   0:00:00
@@ -56,7 +56,7 @@
   <button id="opt-printpuzzle" class="button">Print</button>
 </div>
 <div id="footer">
-  <p id="sc-info">Keyboard shortcuts: arrow keys, 0-9, enter</p>
+  <p id="sc-info">Keyboard shortcuts: Arrow Keys, 0-9, Enter</p>
   <h3>How to play Sudoku </h3>
   <p>The object of the game is to complete the 9x9 grid so that each row, column, and 3x3 sub grid contain the digits 1-9 once only.</p>
   <p>Licenced under <a href = "https://creativecommons.org/licenses/by-nc-sa/3.0/">Jaideep25</a></p>
